Flushed out the about me section  and footer

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -26,7 +26,9 @@ body {
     z-index: 101;
     background-repeat: no-repeat;
 }
-
+.blackBg {
+    background-color: #000000;
+}
 .bio-photo {
     display: block;
     width: 50%;
